src/test/deca/codegen/valid/heritage_1.deca
// Description:
//    test d'heritage
//
// Resultats:
//    2
//
// Historique:
//    cree le 23/01/2017
class A {
	int x;
}
class B extends A {
	int y;
}
{
	B c = new B();
	c.x = 2;
	print(c.x);
}